--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,14 +1,16 @@
+<app-header></app-header>
+
 <div class="form-container mt-5">
   <h1 class="mb-4">Login</h1>
   <form [formGroup]="loginForm" (ngSubmit)="login()">
 
     <div class="form-row">
-      <div class="form-group col-md-6">
+      <div class="form-group col-md-4">
         <label for="email">Email address</label>
         <input type="email" class="form-control" formControlName="email" id="email" placeholder="Enter email">
       </div>
 
-      <div class="form-group col-md-6">
+      <div class="form-group col-md-4">
         <label for="password">Password</label>
         <input type="password" class="form-control" formControlName="password" id="email" id="password" placeholder="Password">
       </div>
