--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,5 +1,110 @@
-<p>
-  profile works!
-</p>
+<app-header></app-header>
 
-<button (click)="logout()">Logout</button>
+<div class="container">
+
+  <div class="user-img mt-5"></div>
+  <div class="row">
+
+
+    <div class="user-card  col-3">
+
+      <h5 class="user-fullname mt-4 ml-4">{{user.firstname}} {{user.lastname}}</h5>
+
+      <nav class="mt-4 ml-4">
+
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" [routerLinkActiveOptions]="{ exact: true }" routerLinkActive="active"><i
+                class="fas fa-user"></i> Overview</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" [routerLinkActiveOptions]="{ exact: true }" routerLinkActive="active"><i
+                class="fas fa-cog"></i> Edit account</a>
+          </li>
+          <li>
+            <a class="nav-link" (click)="profileStart = !profileStart">Switch</a>
+          </li>
+        </ul>
+
+      </nav>
+
+    </div>
+
+    <div *ngIf="profileStart; then editAccount; else overview"></div>
+
+  </div>
+
+
+</div>
+
+
+<ng-template #overview>
+  <div class="col-9 mt-4">
+    <ul class="list-group">
+      <li class="list-group-item"><strong>Birth date:</strong> {{ user.dateofbirth }}</li>
+      <li class="list-group-item"><strong>Addressline:</strong> {{ user.addressline }}</li>
+      <li class="list-group-item"><strong>Zip:</strong> {{ user.zipcode }}</li>
+      <li class="list-group-item"><strong>City:</strong> {{ user.city }}</li>
+      <li class="list-group-item"></li>
+    </ul>
+  </div>
+</ng-template>
+
+<ng-template #editAccount>
+    <form  [formGroup]="updateForm" (ngSubmit)="updateUserInfo()" class="mb-4 col-9">
+
+        <div class="form-row">
+          <div class="form-group col-md-6">
+            <label for="firstname">Firstname</label>
+            <input value="{{user.firstname}}" type="text" formControlName="firstname" class="form-control" id="firstname">
+          </div>
+          <div class="form-group col-md-6">
+            <label for="lastname">Lastname</label>
+            <input value="{{user.lastname}}" type="text" formControlName="lastname" class="form-control" id="lastname">
+          </div>
+        </div>
+    
+        <div class="form-row">
+          <div class="form-group col-md-6">
+            <label for="dateofbirth">Date of birth</label>
+            <input value="{{user.dateofbirth}}" type="text" formControlName="dateofbirth" class="form-control" id="dateofbirth" placeholder="yyyymmdd-xxxx">
+          </div>
+        </div>
+    
+        <div class="form-row">
+          <div class="form-group col-md-6">
+            <label for="addressline">Addressline</label>
+            <input value="{{user.addressline}}" type="text" formControlName="addressline" class="form-control" id="addressline">
+          </div>
+          <div class="form-group col-md-3">
+            <label for="zipcode">Zipcode</label>
+            <input value="{{user.zipcode}}" type="text" formControlName="zipcode" class="form-control" id="zipcode">
+          </div>
+        </div>
+    
+        <div class="form-row">
+          <div class="form-group col-md-6">
+            <label for="city">City</label>
+            <input value="{{user.city}}" type="text" formControlName="city" class="form-control" id="city">
+          </div>
+    
+          <div class="form-group col-md-6">
+            <label for="country">Country</label>
+            <input value="{{user.country}}" type="text" formControlName="country" class="form-control" id="country">
+          </div>
+        </div>
+    
+        <div class="form-row">
+          <div class="form-group col-md-6">
+            <label for="email">Email address</label>
+            <input value="{{user.email}}" type="email" formControlName="email" class="form-control" id="email">
+          </div>
+          <div class="form-group col-md-6">
+            <label for="password">Password</label>
+            <input value="{{user.password}}" type="password" formControlName="password" class="form-control" id="password">
+          </div>
+        </div>
+    
+        <button type="submit" value="Register" class="btn btn-lg btn-primary">Update</button>
+      </form>
+</ng-template>
