--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,3 +1,5 @@
+<app-header></app-header>
+
 <div class="form-container mt-4 ">
   <h1 class="mb-4">Register</h1>
 
@@ -19,7 +21,7 @@
     <div class="form-row">
       <div class="form-group col-md-6">
         <label for="dateofbirth">Date of birth</label>
-        <input type="text" formControlName="dateofbirth" class="form-control" id="dateofbirth" placeholder="yyyymmdd-xxxx">
+        <input type="date" formControlName="dateofbirth" class="form-control" id="dateofbirth" placeholder="yyyy-mm-dd">
       </div>
     </div>
 
