--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -5,12 +5,15 @@
   <form [formGroup]="loginForm" (ngSubmit)="login()">
 
     <div class="form-row">
-      <div class="form-group col-md-4">
+      <div class="form-group col-md-6">
         <label for="email">Email address</label>
         <input type="email" class="form-control" formControlName="email" id="email" placeholder="Enter email">
       </div>
 
-      <div class="form-group col-md-4">
+    </div>
+
+    <div class="form-row">
+      <div class="form-group col-md-6">
         <label for="password">Password</label>
         <input type="password" class="form-control" formControlName="password" id="email" id="password" placeholder="Password">
       </div>
