--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,11 +1,10 @@
 <app-header></app-header>
 
-<div class="form-container mt-4 ">
-  <h1 class="mb-4">Register</h1>
+<div class="form-container mt-5 ">
 
-  <!--  -->
+  <form [formGroup]="registerForm" (ngSubmit)="register()">
 
-  <form  [formGroup]="registerForm" (ngSubmit)="register()">
+    <h5 class="mb-3">Personal info</h5>
 
     <div class="form-row">
       <div class="form-group col-md-6">
@@ -20,10 +19,18 @@
 
     <div class="form-row">
       <div class="form-group col-md-6">
+        <label for="lastname">Middlename</label>
+        <input type="text" formControlName="middlename" class="form-control" id="middlename">
+      </div>
+      <div class="form-group col-md-6">
         <label for="dateofbirth">Date of birth</label>
         <input type="date" formControlName="dateofbirth" class="form-control" id="dateofbirth" placeholder="yyyy-mm-dd">
       </div>
     </div>
+
+    <hr class="mt-4 mb-4">
+
+    <h5 class="mb-3">Shipping info</h5>
 
     <div class="form-row">
       <div class="form-group col-md-6">
@@ -48,6 +55,15 @@
       </div>
     </div>
 
+    <div class="form-group form-check">
+      <input (click)="billingAddress = !billingAddress" type="checkbox" class="form-check-input" id="showSecondAddress">
+      <label class="form-check-label" for="showSecondAddress">Shipping and billing address are the same</label>
+    </div>
+
+    <div *ngIf="billingAddress; then secondAddress2; else secondAddress"></div>
+
+    <hr class="mt-4 mb-4">
+
     <div class="form-row">
       <div class="form-group col-md-6">
         <label for="email">Email address</label>
@@ -59,7 +75,42 @@
       </div>
     </div>
 
-    <button type="submit" value="Register" class="btn btn-lg btn-primary">Register</button>
+    <button type="submit" value="Register" class="mt-3 btn btn-lg btn-primary mb-5">Register</button>
+
+    <!-- Show billing address Templates -->
+    <ng-template #secondAddress>
+
+      <hr class="mt-4 mb-4">
+
+      <h5 class="mb-3">Billing info</h5>
+
+      <div class="form-row">
+        <div class="form-group col-md-6">
+          <label for="addressline">Addressline</label>
+          <input type="text" formControlName="addressline2" class="form-control" id="addressline2">
+        </div>
+        <div class="form-group col-md-3">
+          <label for="zipcode">Zipcode</label>
+          <input type="text" formControlName="zipcode2" class="form-control" id="zipcode2">
+        </div>
+      </div>
+
+      <div class="form-row">
+        <div class="form-group col-md-6">
+          <label for="city">City</label>
+          <input type="text" formControlName="city2" class="form-control" id="city2">
+        </div>
+
+        <div class="form-group col-md-6">
+          <label for="country">Country</label>
+          <input type="text" formControlName="country2" class="form-control" id="country2">
+        </div>
+      </div>
+
+    </ng-template>
+
+    <ng-template #secondAddress2></ng-template>
+
   </form>
 
 </div>
