--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,5 +1,6 @@
 <app-header></app-header>
 
+
 <div class="container">
 
   <div class="user-img mt-5"></div>
@@ -12,143 +13,148 @@
 
       <nav class="mt-4 ml-4">
 
-        <ul class="navbar-nav">
+        <ul class="nav" id="tabpanel" role="tablist">
+
           <li class="nav-item">
-            <a class="nav-link" [routerLinkActiveOptions]="{ exact: true }" routerLinkActive="active"><i
-                class="fas fa-user"></i> Overview</a>
+            <a class="nav-link active" id="home-tab" data-toggle="tab" href="#overview" role="tab" aria-controls="home"
+              aria-selected="true"> Overview</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" [routerLinkActiveOptions]="{ exact: true }" routerLinkActive="active"><i
-                class="fas fa-cog"></i> Edit account</a>
+            <a class="nav-link" id="profile-tab" data-toggle="tab" href="#editProfile" role="tab"
+              aria-controls="profile" aria-selected="false"> Edit profile</a>
           </li>
-          <li>
-            <a class="nav-link" (click)="profileStart = !profileStart">Switch</a>
-          </li>
+
         </ul>
 
       </nav>
 
     </div>
-
-    <div *ngIf="profileStart; then editAccount; else overview"></div>
-
   </div>
 
 </div>
 
-<ng-template #overview>
-  <div class="col-9 mt-4">
-    <ul class="list-group">
-      <li class="list-group-item"><strong>Firstname:</strong> {{ user.firstname }}</li>
-      <li class="list-group-item"><strong>Middlename:</strong> {{ user.middlename }}</li>
-      <li class="list-group-item"><strong>Lastname:</strong> {{ user.lastname }}</li>
-      <li class="list-group-item"><strong>Birth date:</strong> {{ user.dateofbirth }}</li>
-      <li class="list-group-item"><strong>Addressline:</strong> {{ user.addressline }}</li>
-      <li class="list-group-item"><strong>Zipcode:</strong> {{ user.zipcode }}</li>
-      <li class="list-group-item"><strong>City:</strong> {{ user.city }}</li>
-      <li class="list-group-item"><strong>Country:</strong> {{ user.country }}</li>
-    </ul>
+<div class="container">
+
+  <div class="tab-content" >
+
+    <div class="tab-pane fade show active" id="overview" role="tabpanel" aria-labelledby="home-tab">
+
+      <div class=" mt-4 mb-5">
+        <ul class="list-group">
+          <li class="list-group-item"><strong>Firstname:</strong> {{ user.firstname }}</li>
+          <li class="list-group-item"><strong>Middlename:</strong> {{ user.middlename }}</li>
+          <li class="list-group-item"><strong>Lastname:</strong> {{ user.lastname }}</li>
+          <li class="list-group-item"><strong>Birth date:</strong> {{ user.dateofbirth }}</li>
+          <li class="list-group-item"><strong>Addressline:</strong> {{ user.addressline }}</li>
+          <li class="list-group-item"><strong>Zipcode:</strong> {{ user.zipcode }}</li>
+          <li class="list-group-item"><strong>City:</strong> {{ user.city }}</li>
+          <li class="list-group-item"><strong>Country:</strong> {{ user.country }}</li>
+        </ul>
+      </div>
+
+    </div>
+
+
+    <div class="tab-pane fade mt-4" id="editProfile" role="tabpanel" aria-labelledby="home-tab">
+
+      <form [formGroup]="updateForm" (ngSubmit)="updateUserInfo()" class="mb-4">
+
+        <h5 class="mb-3">Personal info</h5>
+
+        <div class="form-row">
+          <div class="form-group col-md-6">
+            <label for="firstname">Firstname</label>
+            <input type="text" formControlName="firstname" class="form-control" id="firstname">
+          </div>
+          <div class="form-group col-md-6">
+            <label for="lastname">Lastname</label>
+            <input type="text" formControlName="lastname" class="form-control" id="lastname">
+          </div>
+        </div>
+
+        <div class="form-row">
+          <div class="form-group col-md-6">
+            <label for="lastname">Middlename</label>
+            <input type="text" formControlName="middlename" class="form-control" id="middlename">
+          </div>
+          <div class="form-group col-md-6">
+            <label for="dateofbirth">Date of birth</label>
+            <input type="text" formControlName="dateofbirth" class="form-control" id="dateofbirth"
+              placeholder="yyyymmdd-xxxx">
+          </div>
+        </div>
+
+        <hr class="mt-4 mb-4">
+
+        <h5 class="mb-3">Shipping info</h5>
+
+        <div class="form-row">
+          <div class="form-group col-md-6">
+            <label for="addressline">Addressline</label>
+            <input type="text" formControlName="addressline" class="form-control" id="addressline">
+          </div>
+          <div class="form-group col-md-3">
+            <label for="zipcode">Zipcode</label>
+            <input type="text" formControlName="zipcode" class="form-control" id="zipcode">
+          </div>
+        </div>
+
+        <div class="form-row">
+          <div class="form-group col-md-6">
+            <label for="city">City</label>
+            <input type="text" formControlName="city" class="form-control" id="city">
+          </div>
+
+          <div class="form-group col-md-6">
+            <label for="country">Country</label>
+            <input type="text" formControlName="country" class="form-control" id="country">
+          </div>
+        </div>
+
+        <hr class="mt-4 mb-4">
+
+        <h5 class="mb-3">Billing info</h5>
+
+        <div class="form-row">
+          <div class="form-group col-md-6">
+            <label for="addressline">Addressline</label>
+            <input type="text" formControlName="addressline2" class="form-control" id="addressline2">
+          </div>
+          <div class="form-group col-md-3">
+            <label for="zipcode">Zipcode</label>
+            <input type="text" formControlName="zipcode2" class="form-control" id="zipcode2">
+          </div>
+        </div>
+
+        <div class="form-row">
+          <div class="form-group col-md-6">
+            <label for="city">City</label>
+            <input type="text" formControlName="city2" class="form-control" id="city2">
+          </div>
+
+          <div class="form-group col-md-6">
+            <label for="country">Country</label>
+            <input type="text" formControlName="country2" class="form-control" id="country2">
+          </div>
+        </div>
+
+        <hr class="mt-4 mb-4">
+
+        <div class="form-row">
+          <div class="form-group col-md-6">
+            <label for="email">Email address</label>
+            <input type="email" formControlName="email" class="form-control" id="email">
+          </div>
+          <div class="form-group col-md-6">
+            <label for="password">Password</label>
+            <input type="password" formControlName="password" class="form-control" id="password">
+          </div>
+        </div>
+
+        <button type="submit" value="Update" class="btn btn-lg btn-primary">Update</button>
+
+      </form>
+    </div>
   </div>
-</ng-template>
 
-<ng-template #editAccount>
-  <form [formGroup]="updateForm" (ngSubmit)="updateUserInfo()" class="mb-4 col-9">
-
-    <h5 class="mb-3">Personal info</h5>
-
-    <div class="form-row">
-      <div class="form-group col-md-6">
-        <label for="firstname">Firstname</label>
-        <input type="text" formControlName="firstname" class="form-control" id="firstname">
-      </div>
-      <div class="form-group col-md-6">
-        <label for="lastname">Lastname</label>
-        <input type="text" formControlName="lastname" class="form-control" id="lastname">
-      </div>
-    </div>
-
-    <div class="form-row">
-      <div class="form-group col-md-6">
-        <label for="lastname">Middlename</label>
-        <input type="text" formControlName="middlename" class="form-control" id="middlename">
-      </div>
-      <div class="form-group col-md-6">
-        <label for="dateofbirth">Date of birth</label>
-        <input type="text" formControlName="dateofbirth" class="form-control"
-          id="dateofbirth" placeholder="yyyymmdd-xxxx">
-      </div>
-    </div>
-
-    <hr class="mt-4 mb-4">
-
-    <h5 class="mb-3">Shipping info</h5>
-
-    <div class="form-row">
-      <div class="form-group col-md-6">
-        <label for="addressline">Addressline</label>
-        <input type="text" formControlName="addressline" class="form-control"
-          id="addressline">
-      </div>
-      <div class="form-group col-md-3">
-        <label for="zipcode">Zipcode</label>
-        <input type="text" formControlName="zipcode" class="form-control" id="zipcode">
-      </div>
-    </div>
-
-    <div class="form-row">
-      <div class="form-group col-md-6">
-        <label for="city">City</label>
-        <input type="text" formControlName="city" class="form-control" id="city">
-      </div>
-
-      <div class="form-group col-md-6">
-        <label for="country">Country</label>
-        <input type="text" formControlName="country" class="form-control" id="country">
-      </div>
-    </div>
-
-    <hr class="mt-4 mb-4">
-
-    <h5 class="mb-3">Billing info</h5>
-
-    <div class="form-row">
-      <div class="form-group col-md-6">
-        <label for="addressline">Addressline</label>
-        <input type="text" formControlName="addressline2" class="form-control" id="addressline2">
-      </div>
-      <div class="form-group col-md-3">
-        <label for="zipcode">Zipcode</label>
-        <input type="text" formControlName="zipcode2" class="form-control" id="zipcode2">
-      </div>
-    </div>
-
-    <div class="form-row">
-      <div class="form-group col-md-6">
-        <label for="city">City</label>
-        <input type="text" formControlName="city2" class="form-control" id="city2">
-      </div>
-
-      <div class="form-group col-md-6">
-        <label for="country">Country</label>
-        <input type="text" formControlName="country2" class="form-control" id="country2">
-      </div>
-    </div>
-
-    <hr class="mt-4 mb-4">
-
-    <div class="form-row">
-      <div class="form-group col-md-6">
-        <label for="email">Email address</label>
-        <input type="email" formControlName="email" class="form-control" id="email">
-      </div>
-      <div class="form-group col-md-6">
-        <label for="password">Password</label>
-        <input type="password" formControlName="password" class="form-control" id="password">
-      </div>
-    </div>
-
-    <button type="submit" value="Update" class="btn btn-lg btn-primary">Update</button>
-
-  </form>
-
-</ng-template>
+</div>
