--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
 
-<div class="form-container mt-5 ">
+<div class="container mt-5 ">
 
   <form [formGroup]="registerForm" (ngSubmit)="register()">
 
